# apiControllers/indexController.js
@@ -10,6 +10,7 @@ const authToken = require('../helpers/authToken');
 const httpStatus = require('../configs/httpStatusConsts');
 const formValidator = require('../helpers/FormValidator');
 const schema = require('../helpers/schema');
+const AdPushupError = require('../helpers/AdPushupError');
 
 function createNewUser(params) {
 	const origName = utils.trimString(params.name);
@@ -143,12 +144,10 @@ router
 
 				// custom check for AdPushupError
 				if (e.name && e.name === 'AdPushupError') {
-					return res
-						.status(httpStatus.INTERNAL_SERVER_ERROR)
-						.json({ errors: e.message, formData: req.body });
+					return res.status(httpStatus.BAD_REQUEST).json({ errors: e.message });
 				}
 
-				return res.status(httpStatus.INTERNAL_SERVER_ERROR).json({ message: errorMessage });
+				return res.status(httpStatus.INTERNAL_SERVER_ERROR).json({ error: errorMessage });
 			});
 	})
 	.post('/login', (req, res) => {
@@ -205,6 +204,41 @@ router
 			)
 			.catch(err => {
 				res.status(httpStatus.BAD_REQUEST).json({ error: err.message });
+			});
+	})
+	.post('/forgotPassword', (req, res) => {
+		userModel
+			.forgotPassword(req.body)
+			.then(() => {
+				res
+					.status(httpStatus.OK)
+					.json({ success: 'Verification Email has been sent successfully!' });
+			})
+			.catch(e => {
+				if (e instanceof AdPushupError) {
+					if (typeof e.message === 'object' && e.message.email) {
+						res.status(httpStatus.BAD_REQUEST).json({ errors: e.message });
+					}
+				} else if (e.name && e.name === 'CouchbaseError') {
+					res.status(httpStatus.NOT_FOUND).json({ error: 'User Not Found!' });
+				}
+			});
+	})
+	.post('/resetPassword', (req, res) => {
+		// email, key, password
+		userModel
+			.postResetPassword(req.body)
+			.then(() =>
+				res.status(httpStatus.OK).json({ success: 'Your password has been reset successfully!' })
+			)
+			.catch(e => {
+				if (e instanceof AdPushupError) {
+					res
+						.status(httpStatus.BAD_REQUEST)
+						.json(e.message.keyNotFound ? { error: 'Key not found!' } : { errors: e.message });
+				} else if (e.name && e.name === 'CouchbaseError') {
+					res.status(httpStatus.NOT_FOUND).json({ error: 'User not found!' });
+				}
 			});
 	});
 
